# back-auth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env-local  pyproject.toml
docker/: entrypoint.sh
src/: logging.dev.yaml  logging.yaml
src/alembic/: env.py
src/alembic/versions/: 7c999d0c5044_make_users_id_autoincrement.py  93db670ec850_create_user_model.py
src/application/: asgi.py
src/application/api/: middlewares.py  router.py
src/application/config/: app_settings.py  sentry.py
src/domain_one/: di.py
src/domain_one/adapters/: user_postgres_repository.py
src/domain_one/api/: router.py
src/domain_one/api/fastapi/: user.py
src/domain_one/api/schemas/: user.py
src/domain_one/core/ports/: user.py
src/domain_one/core/use_cases/users/: create_user.py  delete_user.py  get_user.py  get_users.py  update_user.py
src/infra/databases/: postgres.py
src/users/adapters/: user_postgres_repository.py
src/users/api/fastapi/: user.py
src/users/api/schemas/: user.py
src/users/core/dtos/: user.py
src/users/core/ports/: user.py
src/users/core/use_cases/users/: create_user.py  delete_user.py  get_user.py  get_users.py  login_user.py  signup_user.py  update_user.py
